# scim2-models

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yaml
doc/: changelog.rst  conf.py  contributing.rst  index.rst  reference.rst  tutorial.rst
examples/scim-provider/: README.md  pyproject.toml
examples/scim-provider/scim_provider/: backend.py  cli.py  filter.py  operators.py  provider.py  utils.py
examples/scim-provider/scim_provider/resources/: default-resource-types.json  default-schemas.json
examples/scim-provider/tests/: conftest.py  fake_user_data.json  test_backend.py  test_operators.py  test_patch.py  test_provider.py  test_utils.py  utils.py
examples/scim-provider/tests/integration/: test_basic.py  test_etags.py  test_ms_entra.py  test_okta.py  test_scim_provider.py
pydantic_scim2/: __init__.py  attributes.py  base.py  enterprise_user.py  group.py  resource.py  resource_type.py  responses.py  schema.py  search_request.py  service_provider.py  user.py  utils.py
pydantic_scim2/rfc7643/: enterprise_user.py  group.py  resource.py  resource_type.py  schema.py  service_provider.py  user.py
pydantic_scim2/rfc7644/: bulk.py  error.py  list_response.py  patch_op.py  search_request.py
pydanticscim/: __init__.py  enterprise_user.py  group.py  resource_type.py  responses.py  service_provider.py  user.py
pydanticscim2/: resource_type.py  responses.py  user.py
samples/: rfc7643-8.2-user-full.json  rfc7643-8.3-enterprise_user.json  rfc7643-8.7.1-schema-enterprise_user.json  rfc7643-8.7.1-schema-group.json  rfc7643-8.7.1-schema-user.json  rfc7643-8.7.2-schema-resource_type.json  rfc7643-8.7.2-schema-schema.json  rfc7643-8.7.2-schema-service_provider_configuration.json  rfc7644-3.12-error-bad_request.json  rfc7644-3.12-error-not_found.json  rfc7644-3.14-user-post_response.json  rfc7644-3.3-user-post_request.json  rfc7644-3.3-user-post_response.json  rfc7644-3.4.1-user-known-resource.json  rfc7644-3.4.2-list_response-partial_attributes.json  rfc7644-3.4.3-search_request.json  rfc7644-3.5.1-user-put_request.json  rfc7644-3.5.1-user-put_response.json  rfc7644-3.5.2.1-patch_op-add_members.json  rfc7644-3.5.2.3-patch_op-replace_all_members.json  rfc7644-3.5.2.3-patch_op-replace_street_address.json  rfc7644-3.7.1-bulk_request-circular_conflict.json  rfc7644-3.7.2-bulk_request-enterprise_user.json  rfc7644-3.9-user-partial_response.json  rfc7644-4-list_response-resource_types.json  rfc7644-8.4.3-list_response-post_query-skip.json
scim2_models/: __init__.py  attributes.py  base.py  constants.py  utils.py
scim2_models/rfc7643/: enterprise_user.py  group.py  resource.py  resource_type.py  schema.py  service_provider.py  service_provider_config.py  user.py
scim2_models/rfc7644/: bulk.py  error.py  list_response.py  message.py  patch_op.py  search_request.py
tests/: conftest.py  test_dynamic_resources.py  test_dynamic_schemas.py  test_enterprise_user.py  test_errors.py  test_group.py  test_list_response.py  test_model_attributes.py  test_model_mutability.py  test_model_serialization.py  test_model_serialization_context.py  test_model_validation.py  test_model_validation_context.py  test_models.py  test_patch_op.py  test_resource_extension.py  test_resource_type.py  test_responses.py  test_schema.py  test_search_request.py  test_service_provider_configuration.py  test_user.py  test_utils.py
tests/fixtures/: rfc7643-8.1-user-minimal.json  rfc7643-8.2-full_user.json  rfc7643-8.3-enterprise_user.json  rfc7643-8.4-group.json  rfc7643-8.5-service_provider_configuration.json  rfc7643-8.6-resource_type-group.json  rfc7643-8.6-user_resource_type.json  rfc7643-8.7.1-group_schema.json  rfc7643-8.7.1-schema-enterprise_user.json  rfc7643-8.7.1-schema-user.json  rfc7643-8.7.2-schema-resource_type.json  rfc7643-8.7.2-schema-schema.json  rfc7643-8.7.2-service_provider_configuration_schema.json  rfc7644-3.5.2.1-patch_add_emails.json  rfc7644-3.5.2.2-patch_remove_all_members.json  rfc7644-3.5.2.2-patch_remove_and_add_one_member.json  rfc7644-3.5.2.2-patch_remove_multi_complex_value.json  rfc7644-3.5.2.2-patch_remove_one_member.json  rfc7644-3.5.2.3-patch_op-replace_all_email_values.json  rfc7644-3.5.2.3-patch_op-replace_user_work_address.json  rfc7644-3.6-error-not_found.json  rfc7644-3.7.1-list_response-circular_reference.json  rfc7644-3.7.2-bulk_request-temporary_identifier.json  rfc7644-3.7.2-bulk_response_temporary_identifier.json  rfc7644-3.7.3-bulk_request_multiple_operations.json  rfc7644-3.7.3-bulk_response-error_invalid_syntax.json  rfc7644-3.7.3-bulk_response-multiple_operations.json  rfc7644-3.7.3-bulk_response_multiple_errors.json  rfc7644-3.7.3-error_invalid_syntax.json  rfc7644-3.7.4-error_payload_too_large.json
