[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scim2-models"
version = "0.2.2"
description = "SCIM2 models serialization and validation with pydantic"
authors = [{name="Yaal Coop", email="contact@yaal.coop"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["scim", "scim2", "provisioning", "pydantic", "rfc7643", "rfc7644"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.9"
dependencies = [
    "pydantic[email]>=2.7.0, <4"
]

[project.urls]
documentation = "https://scim2-models.readthedocs.io"
repository = "https://github.com/yaal-coop/scim2-models"
changelog = "https://scim2-models.readthedocs.io/en/latest/changelog.html"
funding = "https://github.com/sponsors/yaal-coop"

[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "pytest-coverage>=0.0",
    "tox-uv>=1.16.0",
]

doc = [
    "autodoc-pydantic>=2.2.0",
    "myst-parser>=3.0.1",
    "shibuya>=2024.5.15",
    "sphinx>=7.3.7",
    "sphinx-togglebutton>=0.3.2",
]

[tool.coverage.run]
source = [
    "scim2_models",
    "tests",
]
omit = [".tox/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "@pytest.mark.skip",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "E722", # bare-except
    "D100", # public module
    "D101", # public class
    "D102", # public method
    "D103", # public function
    "D104", # public package
    "D105", # magic method
    "D106", # nested class
    "D107", # public init
    "D203", # no-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags= "ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

# [tool.mypy]
# plugins = [
#   "pydantic.mypy"
# ]

[tool.tox]
requires = ["tox>=4.19"]
env_list = [
    "style",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "minversions",
    "doc",
    "coverage",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
commands = [
    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
]

[tool.tox.env.style]
skip_install = true
deps = "pre-commit-uv"
commands = [
    ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
]

[tool.tox.env.minversions]
uv_resolution = "lowest-direct"
commands = [
    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
]

[tool.tox.env.doc]
dependency_groups = ["doc"]
commands = [
    ["sphinx-build", "--builder", "html", "doc", "build/sphinx/html"],
    ["sphinx-build", "--builder", "man", "doc", "build/sphinx/html"],
]

[tool.tox.env.coverage]
commands = [
    ["pytest", "--cov", "--cov-fail-under=100", "--cov-report", "term:skip-covered", "{posargs}"],
    ["coverage", "html"],
]
